--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -93,16 +93,12 @@ body {
   width: 35%;
 }
 .file-manager .file-list .name {
-  width: 70%;
+  display: flex;
+  width: 60%;
 }
-.file-manager .file-list .name:hover {
-  width: 70%;
+.file-manager .file-list .name div:hover {
   cursor: pointer;
   text-decoration: underline;
-}
-.file-manager .file-list .heading .name:hover {
-  cursor: default;
-  text-decoration: none;
 }
 .file-manager .file-list .type {
   width: 20%;
@@ -110,10 +106,14 @@ body {
 .file-manager .file-list .size {
   width: 10%;
 }
+.file-manager .file-list .download {
+  width: 10%;
+}
 
 .btn {
   margin: 0 10px;
-  padding: 10px 20px;
+  height: 100%;
+  padding: 10px 15px;
   background: #FF8F12;
   color: #fff;
   font-size: 1rem;
